force-app/main/default/objects/vlocity_ps__Project__c/fields/vlocity_ps__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>