force-app/main/default/objects/vlocity_ps__Project__c/fields/vlocity_ps__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsDefault__c</fullName>
    <formula>$Setup.vlocity_ps__WorkSetSettings__c.vlocity_ps__DefaultProjectGlobalKey__c  =  vlocity_ps__GlobalKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>