force-app/main/default/objects/vlocity_ps__Project__c/fields/vlocity_ps__LastModifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LastModifier__c</fullName>
    <label>Last Modifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>