force-app/main/default/objects/vlocity_ps__Project__c/fields/vlocity_ps__OriginalCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OriginalCreatedDate__c</fullName>
    <description>The date the record was originally created.</description>
    <label>Original Created Date</label>
    <type>DateTime</type>
</CustomField>