force-app/main/default/objects/vlocity_ps__Project__c/fields/vlocity_ps__ProjectOwner__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProjectOwner__c</fullName>
    <description>The name of the person who owns the project.</description>
    <label>Project Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>