force-app/main/default/objects/vlocity_ps__Project__c/recordTypes/vlocity_ps__Module.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Module</fullName>
    <active>true</active>
    <label>Module</label>
</RecordType>