force-app/main/default/objects/vlocity_ps__Project__c/recordTypes/vlocity_ps__WorkSet.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__WorkSet</fullName>
    <active>true</active>
    <label>Work Set</label>
</RecordType>